# riptide_battery

./: CMakeLists.txt  package.xml
include/riptide_battery/: riptide_battery.hpp
src/: riptide_battery.cpp
